<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EKart</string>
    <string name="main_text">E-KART</string>
    <string name="recommended_for_you">Recommended For You…</string>
    <string name="iphone_x">IPHONE X</string>
    <string name="macbook_pro">MacBook Pro</string>
    <string name="huawei_p30">Huawei \nP30</string>
    <string name="surface_book">Surface \nBook</string>
    <string name="oppo_f19">OPPO F19</string>
    <string name="our_products">Our Products</string>
    <string name="iphone_9">IPHONE 9</string>
    <string name="brown_perfume">Brown \nPerfume</string>
    <string name="tree_oil">Tree Oil</string>
    <string name="keyholder">Key Holder</string>
    <string name="view_all">View all</string>
    <string name="categories">Categories</string>
    <string name="mobiles">MOBILES</string>
    <string name="laptops">LAPTOPS</string>
    <string name="fragrances">FRAGRANCES</string>
    <string name="skincare">SKINCARE</string>
    <string name="groceries">GROCERIES</string>
    <string name="home_decors">HOME-DECORS</string>
    <string name="mobile">MOBILE</string>
    <string name="e_mail">E-MAIL</string>
    <string name="name">NAME</string>
    <string name="password">PASSWORD</string>
    <string name="login_status">LOGIN STATUS</string>
    <string name="logout">Logout</string>
    <string name="enter_credentials">Enter Credentials For Login</string>
    <string name="enter_your_mobile_number">enter your Mobile Number</string>
    <string name="enter_your_password">enter Your Password</string>
    <string name="login">Login</string>
    <string name="new_user_signup">New User SignUp Here..</string>
    <string name="enter_details_for_signup">Enter Details for SignUp</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="enter_your_e_mail_address">Enter Your e-Mail address</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="register">Register</string>
    <string name="existing_user">Existing User Click Here</string>
    <string name="description">Description :</string>
    <string name="ratings">Ratings :</string>
    <string name="brand">Brand :</string>
    <string name="category">Category :</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="proceed_to_buy">PROCEED TO BUY</string>
    <string name="my_cart">My Cart</string>
    <string name="item_delete_text">click on item to delete it from cart…</string>
    <string name="enter_address">Enter Your Address for Delivery Purpose</string>
    <string name="door_flat_no">Door/Flat No.</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="land_mark">Land Mark</string>
    <string name="your_pin_code">your PIN Code..</string>
    <string name="your_state">your state..</string>
    <string name="your_city">your city..</string>
    <string name="your_door_no">your door no..</string>
    <string name="your_street">your street..</string>
    <string name="your_near_by_landmark">your near by LandMark..</string>
    <string name="landmark_alert">Please give us some Landmark so we could reach you at ease…</string>
    <string name="pin_alert">Please enter the valid Postal Code</string>
    <string name="state_alert">Please fill in the field State</string>
    <string name="city_alert">Please fill in the field City</string>
    <string name="street_alert">Please fill in the field Street</string>
    <string name="door_alert">Please fill in the field Door/Flat No</string>
    <string name="empty_cart_alert">Please add Some Products in the cart before you click on Buy</string>
    <string name="cart_remove1">\"Are You sure to remove \"</string>
    <string name="cart_remove2">\" from the cart\"</string>
    <string name="login_alert_pv">Please Login Before Adding to Cart</string>
    <string name="login_alert_cart">Login Before You Proceed to Buy</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="as_of_now_we_are_providing_only_cash_on_delivery">*As Of Now We Are providing Only Cash On Delivery</string>
    <string name="your_products_are">Your Products are :</string>
    <string name="address_of_delivery">Address Of Delivery:\n</string>
    <string name="order_success">YOUR ORDER HAS BEEN PLACED SUCCESSFULLY</string>
    <string name="thank_you_txt">You Can View Your Order Details under User Profile</string>
    <string name="order_history">ORDER HISTORY</string>
    <string name="next">NEXT</string>
    <string name="filters">FILTERS</string>
    <string name="apply">APPLY</string>
    <string name="slogan">The Trust which is Delivered @ your Doorstep</string>
    <string name="saved_address">Saved Address</string>
</resources>