<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    tools:context=".BuyingPage">

    <EditText
        android:id="@+id/etForState4"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="your state.."
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForCity" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/topbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/main_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="324dp"
        android:layout_height="19dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/enter_address"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:text="@string/door_flat_no"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/street"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/city"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/state"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/postal_code"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/land_mark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/etForDoorNo"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_door_no"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />



    <EditText
        android:id="@+id/etForCity"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_city"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForStreet" />

    <EditText
        android:id="@+id/etForState"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_state"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForCity" />

    <EditText
        android:id="@+id/etForLandMark"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_near_by_landmark"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForPin" />

    <EditText
        android:id="@+id/etForPin"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_pin_code"
        android:inputType="number"
        android:maxLength="6"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForState" />

    <EditText
        android:id="@+id/etForStreet"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/list"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_street"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForDoorNo" />

    <android.widget.Button
        android:id="@+id/nextInBuy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/addtocartbtn"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>