<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    tools:context=".Login">
    <View
        android:id="@+id/lView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/topbar"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backInLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four"
        android:layout_marginStart="@dimen/twenty"
        android:backgroundTint="@color/topbar"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />
    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/main_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/lView"
        app:layout_constraintEnd_toEndOf="@id/lView"
        app:layout_constraintStart_toStartOf="@id/lView"
        app:layout_constraintTop_toTopOf="@id/lView" />



    <LinearLayout
        android:layout_width="@dimen/three_hundred_and_seventeen"
        android:layout_height="@dimen/four_hundred"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/list"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="175dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:text="@string/enter_credentials"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="@dimen/thirty"/>

        <EditText
            android:id="@+id/etForMail"
            android:layout_width="@dimen/two_hundred_and_fifty"
            android:layout_height="@dimen/thirty"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/linearbg"
            android:hint="@string/enter_your_mobile_number"
            android:layout_marginTop="@dimen/fifty"
            android:ems="10"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="10"/>
        <EditText
            android:id="@+id/etForPassword"
            android:layout_width="@dimen/two_hundred_and_fifty"
            android:layout_height="@dimen/thirty"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/enter_your_password"
            android:background="@drawable/linearbg"
            android:layout_marginTop="@dimen/fifty"
            android:ems="10"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <android.widget.Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="@dimen/hundred_and_twenty"
            android:layout_height="@dimen/forty"
            android:layout_marginTop="@dimen/thirty"
            android:layout_gravity="center"
            android:background="@drawable/addtocartbtn"
            android:textAlignment="center"
            android:inputType="number" />
        <TextView
            android:id="@+id/linkForSignup"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/new_user_signup"
            android:layout_height="@dimen/twenty_five"
            android:layout_margin="@dimen/twenty"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>