<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UserProfile">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/mobile"
        android:fontFamily="@font/cherry_cream_soda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_mail"
        android:fontFamily="@font/cherry_cream_soda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/view2"
        android:background="@color/topbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/main_text"
        android:textColor="@color/white"
        android:fontFamily="@font/cherry_cream_soda"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="140dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/dp"
        app:srcCompat="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:textSize="12sp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="160dp"
        android:layout_height="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:textSize="10sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:fontFamily="@font/cherry_cream_soda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_status"
        android:fontFamily="@font/cherry_cream_soda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/topbar"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <android.widget.Button
        android:id="@+id/logoutButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/viewall"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/orderHistory"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/viewall"
        android:text="@string/order_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>